--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3160,7 +3160,7 @@
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #564d4A;
+		background: #6494AA;
 		color: #ffffff;
 		height: 100%;
 		max-width: 80%;
@@ -3254,7 +3254,7 @@
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #E7DECD;
+		background: #564d4A;
 		height: 3em;
 		left: 0;
 		line-height: 3em;
