--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3160,7 +3160,7 @@
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #6494AA;
+		background: #000000;
 		color: #ffffff;
 		height: 100%;
 		max-width: 80%;
