--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3254,7 +3254,7 @@
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #564d4A;
+		background: #000000;
 		height: 3em;
 		left: 0;
 		line-height: 3em;
