--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,7 +2,7 @@
 <section id="banner">
 	<div class="inner">
 		<h2>Gian Solo</h2>
-		<p>Handcrafted guitar<br /> development<br /> crafted by Gian.</p>
+		<p>Handcrafted guitar<br /> development<br /> curated by Gian.</p>
 		<ul class="actions">
 			<li><a href="#" class="button special">Activate</a></li>
 		</ul>
