--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -2,12 +2,12 @@
 <section id="cta" class="wrapper style4">
 	<div class="inner">
 		<header>
-			<h2>Arcue ut vel commodo</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+			<h2>I Provide Great Care In the Work That I do</h2>
+			<p>I provide great care in the work that I do to help my patrons navigate through music information, unique arts and help curate their lifestyle.</p>
 		</header>
 		<ul class="actions vertical">
-			<li><a href="#" class="button fit special">Activate</a></li>
-			<li><a href="#" class="button fit">Learn More</a></li>
+                   <li><a href="#" class="button fit special">Contact</a></li>
 		</ul>
+
 	</div>
 </section>
