--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -7,28 +7,28 @@
 		</header>
 		<ul class="features">
 			<li class="icon fa-paper-plane-o">
-				<h3>Arcu accumsan</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+				<h3>Adoration</h3>
+				<p>I have a distinct and respectful adoration for the guitar. I can show you how to be one and love your instrument.</p>
 			</li>
 			<li class="icon fa-laptop">
-				<h3>Ac Augue Eget</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+				<h3>Passion</h3>
+				<p>I bring value that my patrons can benefit from. </p>
 			</li>
 			<li class="icon fa-code">
-				<h3>Mus Scelerisque</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+				<h3>Unconventional</h3>
+				<p>I am not typical and neither is the work that I do. I thrive on being offbeat, eccentric and unorthodox.</p>
 			</li>
 			<li class="icon fa-headphones">
-				<h3>Mauris Imperdiet</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+				<h3>I Got Your Back</h3>
+				<p>There's nothing worse than getting no response from the other side of the table. Not the case here. I'm available through email and text.</p>
 			</li>
 			<li class="icon fa-heart-o">
-				<h3>Aenean Primis</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+				<h3>Experienced</h3>
+				<p>With over 26 years of recording, touring, sessions, lessons and more, I am a complete musician through and through.</p>
 			</li>
 			<li class="icon fa-flag-o">
-				<h3>Tortor Ut</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+				<h3>Friendly, Patient and Flexible</h3>
+				<p>I patiently work and have fun while being flexible to my patron's needs and requests. Having fun is a total part of my work ethic.</p>
 			</li>
 		</ul>
 	</div>
