--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
 	</ul>
 	<ul class="copyright">
 		<li>Copyright &copy; 2019 {{ site.title }}</li>
-		<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a>.</li>
+		<li>Design by HTML5 UP.</li>
 		<li>Jekyll integration by Andrew Banchich.</li>
 	</ul>
 </footer>
