--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,10 +2,7 @@
 <section id="banner">
 	<div class="inner">
 		<h2>Gian Solo</h2>
-		<p>Handcrafted guitar<br /> development<br /> curated by Gian.</p>
-		<ul class="actions">
-			<li><a href="#" class="button special">Activate</a></li>
-		</ul>
+		<p>Guitarist ∙ Writer<br /> Creator ∙ Master <br /> NoHo/Los Angeles</p>
 	</div>
 	<a href="#one" class="more scrolly">Learn More</a>
 </section>
