--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -4,5 +4,5 @@
 		<h2>Gian Solo</h2>
 		<p>Guitarist ∙ Writer<br /> Creator ∙ Master <br /> NoHo/Los Angeles</p>
 	</div>
-	<a href="#one" class="more scrolly">Learn More</a>
+	<a href="#one" class="more scrolly">More</a>
 </section>
