--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -2,7 +2,7 @@
 <section id="one" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
-			<h2>Guitarist, Writer, Teacher Unbound in Los Angeles</h2>
+			<h2>Guitarist, Writer, Teacher in Los Angeles</h2>
 			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, Web Development & Content Creation.</p>
 		</header>
 		<ul class="icons major">
