--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -6,7 +6,7 @@
 			<p>I provide great care in the work that I do to help my patrons navigate through music information, unique arts and help curate their lifestyle.</p>
 		</header>
 		<ul class="actions vertical">
-                   <li><a href="#" class="button fit special">Contact</a></li>
+                   <li><a href="https://gianguitar.github.io/giansolo/contact.html" class="button fit special">Contact</a></li>
 		</ul>
 
 	</div>
