--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3701,7 +3701,7 @@
 
 	#footer {
 		padding: 6em 0 4em 0 ;
-		background-color: #2E3842;
+		background-color: #000000;
 		text-align: center;
 	}
 
