--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2795,7 +2795,7 @@
 			}
 
 		.wrapper.style2 {
-			background-color: #2E3842;
+			background-color: #f7f4f0;
 		}
 
 		.wrapper.style3 {
@@ -3062,7 +3062,7 @@
 				}
 
 			.wrapper.style5 table th {
-				color: #2E3842;
+				color: #000000;
 			}
 
 			.wrapper.style5 table thead {
