--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1449,7 +1449,7 @@
 		-webkit-transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		-ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		transition: color 0.2s ease, border-bottom-color 0.2s ease;
-		border-bottom: dotted 1px;
+		border-bottom: dotted 0px;
 		color: inherit;
 		text-decoration: none;
 	}
@@ -2795,7 +2795,7 @@
 			}
 
 		.wrapper.style2 {
-			background-color: #f7f4f0;
+			background-color: #eadac8;
 		}
 
 		.wrapper.style3 {
@@ -3810,5 +3810,5 @@
 	}
 
 	body.is-mobile.landing #footer {
-		background-color: #1d242a;
+		background-color: #000000;
 	}
