--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2795,7 +2795,7 @@
 			}
 
 		.wrapper.style2 {
-			background-color: #eadac8;
+			background-color: #c1c1c1;
 		}
 
 		.wrapper.style3 {
@@ -2957,7 +2957,7 @@
 		}
 
 		.wrapper.style5 {
-			background-color: #ffffff;
+			background-color: #000000;
 			color: #4E4852;
 		}
 
@@ -3062,7 +3062,7 @@
 				}
 
 			.wrapper.style5 table th {
-				color: #000000;
+				color: #dfdfdf;
 			}
 
 			.wrapper.style5 table thead {
