--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2795,7 +2795,7 @@
 			}
 
 		.wrapper.style2 {
-			background-color: #ababab;
+			background-color: #ffffff;
 		}
 
 		.wrapper.style3 {
@@ -2957,7 +2957,7 @@
 		}
 
 		.wrapper.style5 {
-			background-color: #000000;
+			background-color: #ffffff;
 			color: #4E4852;
 		}
 
