--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -6,11 +6,11 @@
 			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, Web Development & Content Creation.</p>
 		</header>
 		<ul class="icons major">
-			<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span>
+			<li><span class="icon fa-guitar major style1"><span class="label">Lorem</span></span>
 			</li>
-			<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span>
+			<li><span class="icon fa-pen-fancy major style2"><span class="label">Ipsum</span></span>
 			</li>
-			<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span>
+			<li><span class="icon fa-envelope major style3"><span class="label">Dolor</span></span>
 			</li>
 		</ul>
 	</div>
