--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -6,9 +6,9 @@
 			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, Web Development & Content Creation.</p>
 		</header>
 		<ul class="icons major">
-			<li><span class="fas fa-guitar major style1"><span class="label">Lorem</span></span>
+			<li><span class="icon fa-guitar major style1"><span class="label">Lorem</span></span>
 			</li>
-			<li><span class="fas fa-pen-fancy major style2"><span class="label">Ipsum</span></span>
+			<li><span class="icon fa-pen-fancy major style2"><span class="label">Ipsum</span></span>
 			</li>
 			<li><span class="icon fa-envelope major style3"><span class="label">Dolor</span></span>
 			</li>
