--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -3,7 +3,7 @@
 	<div class="inner">
 		<header class="major">
 			<h2>Guitarist, Writer, Teacher in Los Angeles</h2>
-			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, Web Development & Content Creation.</p>
+			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, <br />Web Development & Content Creation.</p>
 		</header>
 		<ul class="icons major">
 			<li><span class="icon fa-guitar-electric major style1"><span class="label">Lorem</span></span>
