--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -6,11 +6,11 @@
 			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, <br />Web Development & Content Creation.</p>
 		</header>
 		<ul class="icons major">
-			<li><span class="icon fa-guitar-electric major style1"><span class="label">Lorem</span></span>
+			<li><span class="icon fa-music major style1"><span class="label"></span></span>
 			</li>
-			<li><span class="icon fa-pencil major style2"><span class="label">Ipsum</span></span>
+			<li><span class="icon fa-pencil major style2"><span class="label"></span></span>
 			</li>
-			<li><span class="icon fa-guitar-acoustic major style3"><span class="label">Dolor</span></span>
+			<li><span class="icon fa-code major style3"><span class="label">Code</span></span>
 			</li>
 		</ul>
 	</div>
