--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -4,21 +4,14 @@
 		<header class="major">
 		</header>
 		<ul class="features">
-			<li class="icon fa-paper-plane-o">
-				<h3>Adoration</h3>
-				<p>I have a distinct and respectful adoration for the guitar. I can show you how to be one and love your instrument.</p>
 			</li>
 			<li class="icon fa-laptop">
 				<h3>Passion</h3>
-				<p>I bring value that my patrons can benefit from. </p>
+				<p>The guitar is my passion. Now, it will be yours too. Become one with your instrument. </p>
 			</li>
 			<li class="icon fa-code">
 				<h3>Unconventional</h3>
 				<p>I am not typical and neither is the work that I do. I thrive on being offbeat, eccentric and unorthodox.</p>
-			</li>
-			<li class="icon fa-headphones">
-				<h3>I Got Your Back</h3>
-				<p>There's nothing worse than getting no response from the other side of the table. Not the case here. I'm available through email and text.</p>
 			</li>
 			<li class="icon fa-heart-o">
 				<h3>Experienced</h3>
