--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -5,19 +5,19 @@
 		</header>
 		<ul class="features">
 			</li>
-			<li class="icon fa-laptop">
+			<li class="icon fa-hand-o-right">
 				<h3>Passion</h3>
 				<p>The guitar is my passion. Now, it will be yours too. Become one with your instrument. </p>
 			</li>
-			<li class="icon fa-code">
+			<li class="icon fa-fire">
 				<h3>Unconventional</h3>
 				<p>I am not typical and neither is the work that I do. I thrive on being offbeat, eccentric and unorthodox.</p>
 			</li>
-			<li class="icon fa-heart-o">
+			<li class="icon fa-key">
 				<h3>Experienced</h3>
 				<p>With over 26 years of recording, touring, sessions, lessons and more, I am a complete musician through and through.</p>
 			</li>
-			<li class="icon fa-flag-o">
+			<li class="icon fa-heart-o">
 				<h3>Friendly, Patient and Flexible</h3>
 				<p>I patiently work and have fun while being flexible to my patron's needs and requests. Having fun is a total part of my work ethic.</p>
 			</li>
