--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -6,9 +6,9 @@
 			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, <br />Web Development & Content Creation.</p>
 		</header>
 		<ul class="icons major">
-			<li><span class="icon fa-music major style1"><span class="label"></span></span>
+			<li><span class="icon fa-fire major style1"><span class="label"></span></span>
 			</li>
-			<li><span class="icon fa-pencil major style2"><span class="label"></span></span>
+			<li><span class="icon fa-music major style2"><span class="label"></span></span>
 			</li>
 			<li><span class="icon fa-code major style3"><span class="label">Code</span></span>
 			</li>
