--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -3,7 +3,7 @@
 	<div class="inner">
 		<h2>Gian Solo</h2>
 		<p>Guitarist ∙ Writer<br /> Creator ∙ Master <br /> <ul class="icons major">
-			NOHO<li><span class="icon fa-fire major style1"><span class="label">Los Angeles</span></span></li></p>
+			NOHO<li><span class="icon fa-fire major style1"><span class="label">Los Angeles</span></span></li></p></ul>
 	</div>
 	<a href="#one" class="more scrolly">More</a>
 </section>
