--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2642,7 +2642,7 @@
 
 		.wrapper.style1 {
 			background-color: #000000;
-			color: #c7ebe8;
+			color: #F4B0C6;
 		}
 
 			.wrapper.style1 strong, .wrapper.style1 b {
@@ -2800,7 +2800,7 @@
 
 		.wrapper.style3 {
 			background-color: #000000;
-			color: #d3d4e4;
+			color: #4FB0C6;
 		}
 
 			.wrapper.style3 strong, .wrapper.style3 b {
