--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,7 +2,7 @@
 <section id="banner">
 	<div class="inner">
 		<h2>Gian Solo</h2>
-		<p>Guitarist ∙ Writer<br /> Creator ∙ Master <br /> NOHO - LOS ANGELES
+		<p>Guitarist ∙ Writer<br /> Creator ∙ Developer <br /> NOHO ⚡️ LOS ANGELES
 	</div>
 	<a href="#one" class="more scrolly">More</a>
 </section>
