--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -1,9 +1,9 @@
-<!-- One -->
+r<!-- One -->
 <section id="one" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
-			<h2>Guitarist, Writer, Teacher in Los Angeles</h2>
-			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, <br />Web Development & Content Creation.</p>
+			<h2>I provide great care in the work that I do</h2>
+			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, <br />Web Dev & Content Creation.</p>
 		</header>
 		<ul class="icons major">
 			<li><span class="icon fa-fire major style1"><span class="label"></span></span>
