--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -6,20 +6,20 @@
 		<ul class="features">
 			</li>
 			<li class="icon fa-hand-o-right">
-				<h3>Passion</h3>
-				<p>The guitar is my passion. Now, it will be yours too. Become one with your instrument. </p>
+				<h3>Passionate</h3>
+				<p>The guitar is my passion, it's that simple. Now, it can be yours too. Take me on and I'll show you how to become one with your instrument. </p>
 			</li>
 			<li class="icon fa-fire">
 				<h3>Unconventional</h3>
-				<p>I am not typical and neither is the work that I do. I thrive on being offbeat, eccentric and unorthodox.</p>
+				<p>I am not typical and neither is the work that I do. I thrive on being offbeat, eccentric and unorthodox. I am the guitarist that always thinks outside of the box. </p>
 			</li>
 			<li class="icon fa-key">
 				<h3>Experienced</h3>
-				<p>With over 26 years of recording, touring, sessions, lessons and more, I am a complete musician through and through.</p>
+				<p>With over 26 years of recording, touring, sessions, lessons and much, much, more, I am a complete musician through and through. Take my classes to start your guitar journey and gain the experiences you need to become a full-fledged guitar player.</p>
 			</li>
 			<li class="icon fa-heart-o">
 				<h3>Friendly, Patient and Flexible</h3>
-				<p>I patiently work and have fun while being flexible to my patron's needs and requests. Having fun is a total part of my work ethic.</p>
+				<p>I patiently work and have fun while being flexible to my patron's needs and requests. Patience is not only key to learning but also to progressing. Having fun is also a total part of my work ethic as playing the guitar should bring joy and fulfillment to the player and his audience.</p>
 			</li>
 		</ul>
 	</div>
