--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1922,15 +1922,15 @@
 			}
 
 		.icon.style1 {
-			color: #104F55;
+			color: #ffffff;
 		}
 
 		.icon.style2 {
-			color: #32746D;
+			color: #ffffff;
 		}
 
 		.icon.style3 {
-			color: #9EC5AB;
+			color: #ffffff;
 		}
 
 /* Image */
