--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2795,8 +2795,7 @@
 			}
 
 		.wrapper.style2 {
-			background-color: #ffffff;
-			color: #000000;
+			background-color: #bebebe;
 		}
 
 		.wrapper.style3 {
