--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2668,7 +2668,7 @@
 			}
 
 			.wrapper.style1 header p {
-				color: #a6e0db;
+				color: #000000;
 			}
 
 			.wrapper.style1 header.major h2, .wrapper.style1 header.major h3, .wrapper.style1 header.major h4, .wrapper.style1 header.major h5, .wrapper.style1 header.major h6 {
@@ -2676,7 +2676,7 @@
 			}
 
 			.wrapper.style1 header.major p {
-				color: #c7ebe8;
+				color: #000000;
 			}
 
 			.wrapper.style1 label {
