--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3256,8 +3256,7 @@
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #ffffff;
-		color: #000000;
+		background: #000000;
 		height: 3em;
 		left: 0;
 		line-height: 3em;
