--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3703,7 +3703,7 @@
 
 	#footer {
 		padding: 6em 0 4em 0 ;
-		background-color: #ffffff;
+		background-color: #000000;
 		text-align: center;
 	}
 
