--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
 {% include section-two.html %}
 {% include section-three.html %}
 {% include cta.html %}
+{% include disqus.html %}
 {% include footer.html %}
 </body>
 
