--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,7 @@
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 /*
 var disqus_config = function () {
-this.page.url = https://github.com/gianguitar/giansolo;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.url = https://gianguitar.github.io/giansolo/;  // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier = /giansolo; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 */
