--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2838,7 +2838,7 @@
 			}
 
 			.wrapper.style3 label {
-				color: #ffffff;
+				color: #000000;
 			}
 
 			.wrapper.style3 input[type="text"],
@@ -2906,7 +2906,7 @@
 				}
 
 			.wrapper.style3 table th {
-				color: #ffffff;
+				color: #000000;
 			}
 
 			.wrapper.style3 table thead {
