--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2430,7 +2430,7 @@
 
 			.features li:before {
 				display: block;
-				color: #00ffcc;
+				color: #000000;
 				position: absolute;
 				left: 1.75em;
 				top: 2.75em;
