--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -6,7 +6,7 @@
 		<ul class="features">
 			<li class="icon fa-hand-o-right">
 				<h3>Passionate</h3>
-				<p color="#ffffff">The guitar is my passion, it's that simple. Now, it can be yours too. Take me on and I'll show you how to become one with your instrument. </p>
+				<p color="#696969">The guitar is my passion, it's that simple. Now, it can be yours too. Take me on and I'll show you how to become one with your instrument. </p>
 			</li>
 			<li class="icon fa-fire">
 				<h3>Unconventional</h3>
