--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2802,7 +2802,7 @@
 
 		.wrapper.style3 {
 			background-color: #ffffff;
-			color: #0000000;
+			color: #000000;
 		}
 
 			.wrapper.style3 strong, .wrapper.style3 b {
