--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2826,7 +2826,7 @@
 			}
 
 			.wrapper.style3 header p {
-				color: #b9bad3;
+				color: #000000;
 			}
 
 			.wrapper.style3 header.major h2, .wrapper.style3 header.major h3, .wrapper.style3 header.major h4, .wrapper.style3 header.major h5, .wrapper.style3 header.major h6 {
