--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -5,7 +5,7 @@
 		</header>
 		<ul class="features">
 			<li class="icon fa-hand-o-right">
-				<h3 style="color:#b39700">Passionate</h3>
+				<h3 style="color:#00b3b3">Passionate</h3>
 				<p color="#696969">The guitar is my passion, it's that simple. Now, it can be yours too. Take me on and I'll show you how to become one with your instrument. </p>
 			</li>
 			<li class="icon fa-fire">
