--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -2,7 +2,7 @@ r<!-- One -->
 <section id="one" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
-			<h2>I provide great care in the work that I do</h2>
+			<h2 style="color:#009a9a">I provide great care in the work that I do</h2>
 			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, <br />Web Dev & Content Creation.</p>
 		</header>
 		<ul class="icons major">
