--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -3,7 +3,7 @@
 	<div class="inner">
 		<header class="major">
 			<h2 style="color:#009a9a">I provide great care in the work that I do</h2>
-			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, <br />Web Dev & Content Creation.</p>
+			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, Web Development<br /> & Content Creation.</p>
 		</header>
 		<ul class="icons major">
 			<li><span class="icon fa-fire major style1"><span class="label"></span></span>
