--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -6,7 +6,7 @@
 			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, Web Development<br /> & Content Creation.</p>
 		</header>
 		<ul class="icons major">
-			<li><span class="icon fa-pen-alt major style1"><span class="label"></span></span>
+			<li><i class="fas fa-guitar"></i><span class="label"></span></span>
 			</li>
 			<li><span class="icon fa-music major style2"><span class="label"></span></span>
 			</li>
@@ -15,3 +15,4 @@
 		</ul>
 	</div>
 </section>
+<span class="icon fa-guitar major style1">
