--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -6,13 +6,15 @@
 			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, Web Development<br /> & Content Creation.</p>
 		</header>
 		<ul class="icons major">
-			<li><i class="fas fa-guitar"></i><span class="label"></span></span>
+			<li><span class="icon fa-guitar major style1"><span class="label"></span></span>
 			</li>
 			<li><span class="icon fa-music major style2"><span class="label"></span></span>
 			</li>
 			<li><span class="icon fa-play major style3"><span class="label">Code</span></span>
 			</li>
+			<li><i class="fas fa-guitar"></i>
+			</li>
 		</ul>
 	</div>
 </section>
-<span class="icon fa-guitar major style1">
+
