--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1659,8 +1659,7 @@
   background-color: #eee;
   color: #444;
   cursor: pointer;
-  padding-bottom: 15px;
-  padding-top: 15px;
+  padding: 15px;
   width: 100%;
   border: none;
   text-align: left;
@@ -1674,7 +1673,7 @@
 }
 
 .panel {
-  padding: 0 18px;
+  padding: 10 18px;
   display: none;
   background-color: white;
   overflow: hidden;
