--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@
             <div class="inner">
 
                 {{ content }}
-
+			{% include share-bar.html %}
 		</div>
         </section>    
     </article>
