--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1679,6 +1679,24 @@
   overflow: hidden;
 }
 
+.rect {
+    border-top: 3px solid #333;
+    border-bottom: 3px solid #333;
+    padding-top: 15px;
+    margin:0 auto;
+}
+
+.rel {
+    width: 200px;
+    display: inline-block;
+    padding: 5px;
+    opacity: 0.8;
+}
+
+.rel hover {
+     opacity: 1;    
+}
+
 /* Form */
 
 	form {
