--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -80,7 +80,7 @@
 /*
 var disqus_config = function () {
 this.page.url = https://gianguitar.github.io/giansolo/;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+this.page.identifier = gian-guitar; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 */
 (function() { // DON'T EDIT BELOW THIS LINE
