--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,7 +71,7 @@
   {% endfor %}
 
 </div>		    
-                 {% include disqus.html %}     
+                <br />  {% include disqus.html %}     <br />
 		    
 		</div>
         </section>    
