--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,12 +35,13 @@
                 {{ content }}
 			{% include share-bar.html %}
 		    <br /><br />
+
+		    <div class="relatedPosts">
 		    <div class="rect">
-
-<h4>You May Also Enjoy</h4>
-
+		    <h4>You May Also Enjoy</h4>
+			    
 {% assign maxRelated = 4 %}
-{% assign minCommonTags =  2 %}
+{% assign minCommonTags =  1 %}
 {% assign maxRelatedCounter = 0 %}
 
 {% for post in site.posts %}
