--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -3,6 +3,15 @@
 	<div class="inner">
 		<header class="major">
 			<h2 style="color:#009a9a">I provide great care in the work that I do</h2>
+			
+			<div class="box alt">
+		<div class="row 50% uniform">
+			<div class="4u"><span class="image fit"><img src="{{ "/images/pic02.jpg" | absolute_url }}" alt="" /></span></div>
+			<div class="4u"><span class="image fit"><img src="{{ "/images/pic03.jpg" | absolute_url }}" alt="" /></span></div>
+			<div class="4u$"><span class="image fit"><img src="/images/pic04.jpg" alt="" /></span></div>
+		</div>
+	</div>
+			
 			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, Web Development<br /> & Content Creation.</p>
 		</header>
 		<ul class="icons major">
