--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -6,9 +6,9 @@
 			
 			<div class="box alt">
 		<div class="row 50% uniform">
-			<div class="4u"><span class="image fit"><img src="{{ "/images/pic02.jpg" | absolute_url }}" alt="" /></span></div>
-			<div class="4u"><span class="image fit"><img src="{{ "/images/pic03.jpg" | absolute_url }}" alt="" /></span></div>
-			<div class="4u$"><span class="image fit"><img src="/images/pic04.jpg" alt="" /></span></div>
+			<div class="4u"><span class="image fit"><img src="{{ "IMG_E1216.jpg" | absolute_url }}" alt="" /></span></div>
+			<div class="4u"><span class="image fit"><img src="{{ "home.JPG" | absolute_url }}" alt="" /></span></div>
+			<div class="4u$"><span class="image fit"><img src="IMG_E0647.JPG" alt="" /></span></div>
 		</div>
 	</div>
 			
