--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -4,7 +4,7 @@
 		<header class="major">
 			<h2 style="color:#009a9a">I provide great care in the work that I do</h2>
 			
-			<div class="box alt">
+			<div class="box.alt">
 		<div class="row 50% uniform">
 			<div class="4u"><span class="image fit"><img src="{{ "IMG_E1216.jpg" | absolute_url }}" alt="" /></span></div>
 			<div class="4u"><span class="image fit"><img src="{{ "home.JPG" | absolute_url }}" alt="" /></span></div>
