--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -3,14 +3,15 @@
 	<div class="inner">
 		<header class="major">
 			<h2 style="color:#009a9a">I provide great care in the work that I do</h2>
-			
-			<div class="box.alt">
-		<div class="row 50% uniform">
-			<div class="4u"><span class="image fit"><img src="{{ "IMG_E1216.jpg" | absolute_url }}" alt="" /></span></div>
-			<div class="4u"><span class="image fit"><img src="{{ "home.JPG" | absolute_url }}" alt="" /></span></div>
-			<div class="4u$"><span class="image fit"><img src="IMG_E0647.JPG" alt="" /></span></div>
-		</div>
-	</div>
+					
+			<div class="box alt">
+			<div class="row gtr-50 gtr-uniform">
+			<div class="col-12"><span class="image fit"><img src="IMG_E1216.jpg" alt="" /></span></div>
+			<div class="col-4"><span class="image fit"><img src="home.JPG" alt="" /></span></div>
+			<div class="col-4"><span class="image fit"><img src="IMG_E0647.JPG" alt="" /></span></div>
+										</div>
+									</div>
+
 			
 			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, Web Development<br /> & Content Creation.</p>
 		</header>
