--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1701,25 +1701,22 @@
 /* Box */
 
 	.box {
-		border: solid 2px;
-		margin-bottom: 2rem;
-		padding: 1.5rem;
-	}
+		border-radius: 3px;
+		border: solid 2px _palette(border);
+		margin-bottom: _size(element-margin);
+		padding: 1.5em;
 
-		.box > :last-child,
-		.box > :last-child > :last-child,
-		.box > :last-child > :last-child > :last-child {
+		> :last-child,
+		> :last-child > :last-child,
+		> :last-child > :last-child > :last-child {
 			margin-bottom: 0;
 		}
 
-		.box.alt {
+		&.alt {
 			border: 0;
 			border-radius: 0;
 			padding: 0;
 		}
-
-	.box {
-		border-color: #eeeeee;
 	}
 
 /* Form */
