--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1698,26 +1698,9 @@
      opacity: 1;    
 }
 
-/* Box */
-
-	.box {
-		border-radius: 3px;
-		border: solid 2px _palette(border);
-		margin-bottom: _size(element-margin);
-		padding: 1.5em;
-
-		> :last-child,
-		> :last-child > :last-child,
-		> :last-child > :last-child > :last-child {
-			margin-bottom: 0;
-		}
-
-		&.alt {
-			border: 0;
-			border-radius: 0;
-			padding: 0;
-		}
-	}
+.relatedPosts {
+     color: #1884BB;
+}
 
 /* Form */
 
