--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -6,9 +6,9 @@
 					
 			<div class="box alt">
 			<div class="row gtr-50 gtr-uniform">
-			<div class="col-12"><span class="image fit"><img src="images/IMG_E1216.jpg" alt="" /></span></div>
-			<div class="col-4"><span class="image fit"><img src="images/home.JPG" alt="" /></span></div>
-			<div class="col-4"><span class="image fit"><img src="images/IMG_E0647.JPG" alt="" /></span></div>
+			<div class="col-4"><span class="image fit"><img src="assets/images/IMG_E1216.jpg" alt="" /></span></div>
+			<div class="col-4"><span class="image fit"><img src="assets/images/home.JPG" alt="" /></span></div>
+			<div class="col-4"><span class="image fit"><img src="assets/images/IMG_E0647.JPG" alt="" /></span></div>
 										</div>
 									</div>
 
