--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -2,13 +2,13 @@
 <section id="one" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
-			<h2 style="color:#009a9a">I provide great care in the work that I do</h2>
+			<h2 style="color:#1884BB">I provide great care in the work that I do</h2>
 					
 			<div class="box alt">
 			<div class="row gtr-50 gtr-uniform">
-			<div class="col-1"><span class="image fit"><img src="assets/images/0533.jpg" alt="" /></span></div>
-			<div class="col-1"><span class="image fit"><img src="assets/images/0533.jpg" alt="" /></span></div>
-			<div class="col-1"><span class="image fit"><img src="assets/images/0533.jpg" alt="" /></span></div>
+			<div class="col-4"><span class="image fit"><img src="assets/images/0533.jpg" alt="" /></span></div>
+			<div class="col-4"><span class="image fit"><img src="assets/images/0533.jpg" alt="" /></span></div>
+			<div class="col-4"><span class="image fit"><img src="assets/images/0533.jpg" alt="" /></span></div>
 										</div>
 									</div>
 
