--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -2,7 +2,7 @@
 <section id="one" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
-			<h2 style="color:#1884BB">I provide great care in the work that I do</h2>
+			<h2 style="color:#1884BB">UNIQUE + CREATIVE + AUTHENTIC</h2>
 					
 			<div class="box alt">
 			<div class="row gtr-50 gtr-uniform">
