--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -3,16 +3,7 @@
 	<div class="inner">
 		<header class="major">
 			<h2 style="color:#1884BB">UNIQUE + CREATIVE + AUTHENTIC</h2>
-					
-			<div class="box alt">
-			<div class="row gtr-50 gtr-uniform">
-			<div class="col-4"><span class="image fit"><img src="assets/images/0533.jpg" alt="" /></span></div>
-			<div class="col-4"><span class="image fit"><img src="assets/images/0533.jpg" alt="" /></span></div>
-			<div class="col-4"><span class="image fit"><img src="assets/images/0533.jpg" alt="" /></span></div>
-										</div>
-									</div>
-
-			
+			<img src="assets/images/IMG_E1216.JPG" width="600">
 			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, Web Development<br /> & Content Creation.</p>
 		</header>
 		<ul class="icons major">
