--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
 <body class="landing">
 {% include header.html %}
 {% include banner.html %}
+{% include section-one.html %}
+{% include section-three.html %}
 {% include cta.html %}
 {% include footer.html %}
 </body>
