--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -2,7 +2,7 @@
 <section id="cta" class="wrapper style4">
 	<div class="inner">
 		<header>
-			<h2>I Provide Great Care In the Work That I do</h2>
+			<h2>UNIQUE + CREATIVE + AUTHENTIC</h2>
 			<p>I provide great care in the work that I do to help my patrons navigate through music information, unique arts and help curate their lifestyle.</p>
 		</header>
 		<ul class="actions vertical">
