--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -2,7 +2,7 @@
 <section id="one" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
-			<h2 style="color:#1884BB">I PROVIDE GREAT CARE IN TH WORK THAT I DO</h2>
+			<h2 style="color:#1884BB">I PROVIDE GREAT CARE IN THE WORK THAT I DO</h2>
 			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, Web Development<br /> & Content Creation.</p>
 		</header>
 		<ul class="icons major">
