--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -3,7 +3,7 @@
 	<div class="inner">
 		<header class="major">
 			<h2 style="color:#1884BB">I PROVIDE GREAT CARE IN THE WORK THAT I DO</h2>
-			<p>Expert in Guitar Development and Songwriting. <br />Adept in Writing, Blogging, Web Development<br /> & Content Creation.</p>
+			<p>Expert in Guitar Development, Instruction & Songwriting.</p>
 		</header>
 		<ul class="icons major">
 			<li><span class="icon fa-pencil major style1"><span class="label"></span></span>
