--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -4,7 +4,7 @@
 		<header class="major">
 			<h2 style="color:#1884BB">I PROVIDE GREAT CARE IN THE WORK THAT I DO</h2>
 			<p>Expert in Guitar Development, Instruction & Songwriting.</p>
-			<p><img src="https://drive.google.com/uc?id=1h9TkPy_5z1qgCxjLtVmvlTeXDtASHCVu"></p>
+			<p><img src="https://drive.google.com/uc?id=1h9TkPy_5z1qgCxjLtVmvlTeXDtASHCVu" width="800"></p>
 		</header>
 		<ul class="icons major">
 			<li><span class="icon fa-pencil major style1"><span class="label"></span></span>
