--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -2,8 +2,8 @@
 <section id="cta" class="wrapper style4">
 	<div class="inner">
 		<header>
-			<h2>UNIQUE + CREATIVE + AUTHENTIC</h2>
-			<p>I provide great care in the work that I do to help my patrons navigate through music information, unique arts and help curate their lifestyle.</p>
+			<h2>Become One with Your Guitar, Let's Get You Started.</h2>
+			<p>I provide great care in the work that I do to help my students navigate through the art of playing guitar. </p>
 		</header>
 		<ul class="actions vertical">
                    <li><a href="https://gianguitar.github.io/giansolo/contact.html" class="button fit special">Contact</a></li>
