--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -3,9 +3,9 @@
 	<div class="inner">
 		<header>
 			<h2>Become One with Your Guitar, Let's Get You Started.</h2>
-			<p>I provide great care in the work that I do to help my students navigate through the art of playing guitar. </p>
+			<p>I provide great care in the work that I do to help my students navigate through the art of learning how to playing guitar. Get in contact today!</p>
 		</header>
-		<ul class="actions vertical">
+		<ul class="actions vertical" style="color="#1884BB">
                    <li><a href="https://gianguitar.github.io/giansolo/contact.html" class="button fit special">Contact</a></li>
 		</ul>
 
