--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3005,6 +3005,11 @@
 			background-color: transparent;
 		}
 
+  		.wrapper.style4 buttonf fit special {
+			background-color: #1884BB;
+			color: #ffffff;
+		}
+
 		.wrapper.style5 {
 			background-color: #ffffff;
 			color: #4e4852;
