--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -3,7 +3,7 @@
 	<div class="inner">
 		<header>
 			<h2>Become One with Your Guitar, Let's Get You Started.</h2>
-			<p>I provide great care in the work that I do to help my students navigate through the art of learning how to playing guitar. Get in contact today!</p>
+			<p>I provide great care in the work that I do to help my students navigate through the art of learning how to playing guitar. Get in contact today and let's get started!</p>
 		</header>
 		<ul class="actions vertical">
                    <li><a href="https://gianguitar.github.io/giansolo/contact.html" class="button fit special">Contact</a></li>
