--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,8 +1,8 @@
 <!-- Banner -->
 <section id="banner">
 	<div class="inner">
-		<h2>Gian Solo</h2>
-		<p>Guitar Development<br /> by Gian Solo<br /> NOHO ⚡️ LOS ANGELES
+		<h2>Gian Guitar</h2>
+		<p>Handcrafted Guitar Development<br /> by Gian Solo<br /> NOHO ⚡️ LOS ANGELES
 	</div>
 	<a href="#one" class="more scrolly">More</a>
 </section>
