--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,6 +1,8 @@
 <!-- Banner -->
 <section id="banner">
 	<div class="inner">
+		<img src="https://drive.google.com/uc?id=1aPWdOct0gimDvCmLttE-gueYMzGrniXF" width="500px">
+		<br />
 		<h2>Gian Guitar</h2>
 		<p>Handcrafted Guitar Development<br /> by Gian Solo<br /> NOHO ⚡️ LOS ANGELES
 	</div>
