--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
 
 	<!-- Header -->
 	<header id="header" {% if page.layout == 'default' %} class="alt" {% endif %}>
+		<img src="https://drive.google.com/uc?id=1aPWdOct0gimDvCmLttE-gueYMzGrniXF" width="100px">
 		<h1><a href="{{ "" | absolute_url }}/">Gian Guitar</a></h1>
 		<nav id="nav">
 			<ul>
