--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,7 @@
 
 	<!-- Header -->
 	<header id="header" {% if page.layout == 'default' %} class="alt" {% endif %}>
-		<img src="https://drive.google.com/uc?id=1aPWdOct0gimDvCmLttE-gueYMzGrniXF" width="300px">
-		<h1><a href="{{ "" | absolute_url }}/">Gian Guitar</a></h1>
+		<a href="{{ "" | absolute_url }}/"><img src="https://drive.google.com/uc?id=1aPWdOct0gimDvCmLttE-gueYMzGrniXF" width="250px"></a>
 		<nav id="nav">
 			<ul>
 				<li class="special">
