--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3308,7 +3308,7 @@
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #000000;
+		background: #ffffff;
 		height: 3em;
 		left: 0;
 		line-height: 3em;
@@ -3367,7 +3367,7 @@
 
 					#header nav > ul > li > a {
 						border: 0;
-						color: #fff;
+						color: #000000;
 						display: block;
 						font-size: 0.8em;
 						letter-spacing: 0.225em;
