--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1488,6 +1488,7 @@
 	h2 {
 		font-size: 1.35em;
 		line-height: 1.75em;
+		font-family: "Bebas", Times, serif;
 	}
 
 		@media screen and (max-width: 736px) {
