--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3767,7 +3767,7 @@
 		}
 
 			#footer .icons a {
-				color: rgba(255, 255, 255, 0.5);
+				color: rgba(0,0,0,1.0);
 			}
 
 				#footer .icons a:hover {
