--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3566,7 +3566,7 @@
 			-ms-transition-delay: 1.25s;
 			transition-delay: 1.25s;
 			content: '';
-			background: #ccac00;
+			background: #e9bc37;
 			display: block;
 			width: 100%;
 			height: 100%;
