--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -2,8 +2,8 @@
 <section id="one" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
-			<h2 style="color:#1884BB">I PROVIDE GREAT CARE IN THE WORK THAT I DO</h2>
-			<p>Expert in Guitar Development, Instruction & Songwriting.
+			<h2 style="color:#1884BB">Become One with Your Guitar, Let's Get You Started!</h2>
+			<p>Expert in Guitar Development, Instruction & Songwriting. Available for lessons, consultations and sessions.
 			<br /><br /><img src="https://drive.google.com/uc?id=1h9TkPy_5z1qgCxjLtVmvlTeXDtASHCVu" width="900px"></p>
 		</header>
 		<ul class="icons major">
