--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -2,8 +2,8 @@
 <section id="cta" class="wrapper style4">
 	<div class="inner">
 		<header>
-			<h3>Become One with Your Guitar, Let's Get You Started.</h3>
-			<p>I provide great care in the work that I do to help my students navigate through the art of learning how to playing guitar. Get in contact today and let's get started!</p>
+			<h3 style="color: #E9BC37">I PROVIDE GREAT CARE IN THE WORK THAT I DO.</h3>
+			<p>I provide great care in the work that I do to help my students and patrons navigate through the art of learning how to play guitar and reach your goals. Get in contact today and let's get started!</p>
 		</header>
 		<ul class="actions vertical">
                    <li><a href="https://gianguitar.github.io/giansolo/contact.html" class="button fit special">Contact</a></li>
