--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -2,7 +2,7 @@
 <section id="one" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
-			<h2 style="color:#1884BB">Become One with Your Guitar, Let's Get You Started!</h2>
+			<h2 style="color:#E9BC37">Become One with Your Guitar, Let's Get You Started!</h2>
 			<p>Expert in Guitar Development, Instruction & Songwriting. Available for lessons, consultations and sessions.
 			<br /><br /><img src="https://drive.google.com/uc?id=1h9TkPy_5z1qgCxjLtVmvlTeXDtASHCVu" width="900px"></p>
 		</header>
