--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -3,7 +3,8 @@
 	<div class="inner">
 		<header class="major">
 			<h2 style="color:#E9BC37">Become One with Your Guitar, Let's Get You Started!</h2>
-			<p>Expert in Guitar Development, Instruction & Songwriting. Available for lessons, consultations and sessions.
+			<p>Expert in Guitar Development, Instruction & Songwriting. 
+				<br />Available for lessons, consultations and sessions.
 			<br /><br /><img src="https://drive.google.com/uc?id=1h9TkPy_5z1qgCxjLtVmvlTeXDtASHCVu" width="900px"></p>
 		</header>
 		<ul class="icons major">
