--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -4,11 +4,11 @@
 		<header class="major">
 		</header>
 		<ul class="features">
-			<li class="icon fa-hand-o-right">
+			<li class="icon fa-fire">
 				<h3 style="color:#1884BB">Passionate</h3>
 				<p color="#696969">The guitar is my passion, it's that simple. Now, it can be yours too. Take me on and I'll show you how to become one with your instrument. </p>
 			</li>
-			<li class="icon fa-fire">
+			<li class="icon fa-music">
 				<h3 style="color:#1884BB">Unconventional</h3>
 				<p>I am not typical and neither is the work that I do. I thrive on being offbeat, eccentric and unorthodox. I am the guitarist that always thinks outside of the box. </p>
 			</li>
