--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -5,8 +5,7 @@
 			<h2 style="color:#E9BC37">Become One with Your Guitar, Let's Get You Started!</h2>
 			<p>Expert in Guitar Development, Instruction & Songwriting. 
 				<br />Available for lessons, consultations and sessions.
-				<br />Get in <a href="https://www.gianguitar.com/contact">contact</a> today!
-			<br /><br /><img src="https://drive.google.com/uc?id=1h9TkPy_5z1qgCxjLtVmvlTeXDtASHCVu" width="900px"></p>
+				<br />Get in <a href="https://www.gianguitar.com/contact">contact</a> today!</p>
 		</header>
 	</div>
 </section>
