--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -2,7 +2,8 @@
 <section id="one" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
-			<h2 style="color:#E9BC37">Become One with Your Guitar, Let's Get You Started!</h2>
+			<h2 style="color:#E9BC37">Become One with Your Guitar.
+				<br />Let's Get You Started.</h2>
 			<p>Expert in Guitar Development, Instruction & Songwriting. 
 				<br />Available for lessons, consultations and sessions.
 				<br />Get in <a href="https://www.gianguitar.com/contact">contact</a> today!
