--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -2,8 +2,9 @@
 <section id="one" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
-			<h2 style="color:#E9BC37">Become One with Your Guitar.
-				<br />Let's Get You Started.</h2>
+			<h2 style="color:#E9BC37">Become One with Your Guitar.</h2>
+			<p>Learn how to become one with your guitar. From beginner to intermediate, I can provide you essential guitar lessons from the comfort of your own home via Skype.
+			From LA to Spain to wherever Skype is supported, you can finally begin your journey to learning how to play guitar. All ages welcome and encouraged. </p>
 			<p>Expert in Guitar Development, Instruction & Songwriting. 
 				<br />Available for lessons, consultations and sessions.
 				<br />Get in <a href="https://www.gianguitar.com/contact">contact</a> today!
