--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -4,7 +4,7 @@
 		<header class="major">
 			<h2 style="color:#E9BC37">Become One with Your Guitar.</h2>
 			<p>Learn how to become one with your guitar. From beginner to intermediate, I can provide you essential guitar lessons from the comfort of your own home via Skype.
-			From LA to Spain to wherever Skype is supported, you can finally begin your journey to learning how to play guitar. All ages welcome and encouraged. </p>
+			From LA to Spain to wherever Skype is supported, you can finally begin your journey to learning how to play guitar. All ages + skills welcome and encouraged. </p>
 			<br /><br />
 			<ul class="actions vertical">
                    <li><a href="https://www.gianguitar.com/contact.html" class="button primary">Let's Get Started</a></li>
