--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3761,7 +3761,7 @@
 
 	#footer {
 		padding: 6em 0 4em 0 ;
-		background-color: rgba(255,255,255,0);
+		background-color: #cccccc;
 		text-align: center;
 	}
 
