--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3851,7 +3851,7 @@
 	}
 
 	body.landing #footer {
-		background-color: rgba(255,255,255,255);
+		background-color: #cccccc;
 	}
 
 	body.is-mobile.landing #page-wrapper {
@@ -3870,5 +3870,5 @@
 	}
 
 	body.is-mobile.landing #footer {
-		background-color: rgba(255,255,255,255);
+		background-color: #cccccc;
 	}
