--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -7,7 +7,7 @@
 			From LA to Spain to wherever Skype is supported, you can finally begin your journey to learning how to play guitar. All ages + skills welcome and encouraged. </p>
 			<br /><br />
 			<ul class="actions">
-                   <li><a href="https://gianguitar.com/contact" class="button fit small">Let's Get Started</a></li>
+                   <li><a href="https://gianguitar.com/contact" class="button">Let's Get Started</a></li>
 			</ul>
 			<br /><br />
 				<img src="https://drive.google.com/uc?id=1h9TkPy_5z1qgCxjLtVmvlTeXDtASHCVu" width="900px"></p>
