--- a/_includes/section-two.html
+++ b/_includes/section-two.html
@@ -5,5 +5,27 @@
 			<p><img src="https://drive.google.com/uc?id=1h9TkPy_5z1qgCxjLtVmvlTeXDtASHCVu" width="900px"></p>
 		</header>
 	</div>
+{% for post in site.posts limit:site.tiles-count %}{% if site.tiles-source == 'posts' %}
+
+	<section class="spotlight">
+		<div class="image">{% if post.image %}<img src="{% if site.featured-image-source %}{{ post.image | prepend: site.featured-image-source | absolute_url }}{% else %}{{ "" | absolute_url }}/assets/images/{{ post.image }}{% endif %}" alt="" />{% endif %}</div>
+		<div class="content">
+			<h2><a href="{{ post.url | relative_url }}" class="link">{{ post.title }}</a></h2>
+			<p>{{ post.description }}</p>
+		</div>
+	</section>
+
+	{% endif %}{% endfor %}
+	{% for page in site.pages limit:site.tiles-count %}{% if site.tiles-source == 'pages' %}{% if page.layout == 'default' %}{% continue %}{% endif %}
+
+	<section class="spotlight">
+		<div class="image">{% if page.image %}<img src="{% if site.featured-image-source %}{{ page.image | prepend: site.featured-image-source | absolute_url }}{% else %}{{ "" | absolute_url }}/assets/images/{{ page.image }}{% endif %}" alt="" />{% endif %}</div>
+		<div class="content">
+			<h2><a href="{{ page.url | relative_url }}" class="link">{{ page.title }}</a></h2>
+			<p>{{ page.description }}</p>
+		</div>
+	</section>
+
+	{% endif %}{% endfor %}
 
 </section>
