--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -4,7 +4,7 @@
 		<img src="https://drive.google.com/uc?id=1-QnLtzLQKPCXhXGo8JjzPvf8Q9GZaxoI" width="500px">
 		<br />
 		<h2>Gian Guitar</h2>
-		<p>Handcrafted Guitar Development<br /> by Gian Solo<br /> NOHO ⚡️ LOS ANGELES
+		<p>Handcrafted Guitar Development, Songwriting and Writing<br /> by Gian Solo<br /> NOHO ⚡️ LOS ANGELES
 	</div>
 	<a href="#one" class="more scrolly">More</a>
 </section>
