--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -79,7 +79,7 @@
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 /*
 var disqus_config = function () {
-this.page.url = www.gianguitar.com//;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.url = gianguitar.com//;  // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier = gian-guitar; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 */
