--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
 <head>
 	<title>{{ site.title }}</title>
 	<meta charset="utf-8" />
-	<meta name="description" content="San Fernando Valley Guitar Development, Songwriting and Writing - Blogging, Musicians, Guitarist, Lifestyle">
-	<meta name="keywords" content="North Hollywood Guitar Development, San Fernando Valley Guitar, Songwriter, Mentor, Songwriting coach, Guitar Development, Valley Blogging concepts, LA Guitar Development, Los Angeles, North Hollywood, San Fernando Valley, Burbank, Learn, consultation, writing, filipino, Van Nuys, Hollywood, Glendale, WeHo, DTLA, West Hills, Calabasas, Sylmar, San Fernando, Arleta, Sun Valley, Sunland, Sherman Oaks, Tujunga, Toluca Lake, Valley Glen, Encino, Guitar tips, guitar tricks, guitar advice, guitar videos, guitar workshop">
+	<meta name="description" content="Singer-Songwriter & Producer from North Hollywood, CA.">
+	<meta name="keywords" content="North Hollywood, Songwriter, Singer, Musician, Guitarist, Mentor, Los Angeles, North Hollywood, San Fernando Valley, Burbank, Consultation, Writing, Filipino, Hollywood, Glendale, WeHo, DTLA, West Hills, Calabasas, Sylmar, San Fernando, Arleta, Sun Valley, Sunland, Sherman Oaks, Tujunga, Toluca Lake, Valley Glen, Encino, Guitar tips, guitar tricks, guitar advice, guitar videos, guitar workshop">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="{{ "/assets/js/ie/html5shiv.js" | relative_url }}"></script><![endif]-->
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
